--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d3d68f; }
+  background: #0adaa3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #633029; }
+  background: #9a04e6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #80b9ff; }
+  background: #ca662e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8b7175; }
+  background: #1a9e43; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #49b834; }
+  background: #99136e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #0d6b5c; }
+  background: #b17a50; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #688c37; }
+  background: #759621; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9e5c19; }
+  background: #3404fa; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #10ecb8; }
+  background: #cb6aca; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8650d5; }
+  background: #d29763; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2f98c3; }
+  background: #d34e73; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #fb63be; }
+  background: #5bb36d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a8ab86; }
+  background: #7b224d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ec6a26; }
+  background: #894ff5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b7f367; }
+  background: #b914eb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e85eaf; }
+  background: #f07038; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #864459; }
+  background: #58f070; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #bb7d05; }
+  background: #8cda43; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1565c2; }
+  background: #8f2b1f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #70858e; }
+  background: #bdd005; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #bcc3b4; }
+  background: #5682cd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6203a2; }
+  background: #fb7c30; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4109a0; }
+  background: #7ef41d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #99202e; }
+  background: #f8756d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #ebe9b3; }
+  background: #6c2fd3; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #02e495; }
+  background: #918513; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2cca9c; }
+  background: #b76b6c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #89607d; }
+  background: #3e954a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #2bb61f; }
+  background: #7b3e48; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #875178; }
+  background: #62db82; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a66963; }
+  background: #ec9bf3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #65b9ed; }
+  background: #5d353f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3a06c1; }
+  background: #e94a7d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b136b1; }
+  background: #cf0cd1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #07458d; }
+  background: #9f984d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #a12489; }
+  background: #8c43ca; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8357b7; }
+  background: #f24f75; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #49478c; }
+  background: #e4a5f9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #cbc93d; }
+  background: #e45aec; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #eee488; }
+  background: #753959; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #24a3a0; }
+  background: #64fb97; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c044d5; }
+  background: #d5e64b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #692087; }
+  background: #dbeabb; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #2948ff; }
+  background: #6c3b86; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #164190; }
+  background: #4836c4; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e8b1e2; }
+  background: #07c0a7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #6b7f1e; }
+  background: #67abff; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #dffd15; }
+  background: #2fa1f2; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #180ec0; }
+  background: #a0ebbf; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3c5edd; }
+  background: #6e49ae; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a54b39; }
+  background: #492d96; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d7afa1; }
+  background: #37b396; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #460e84; }
+  background: #953067; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f57abf; }
+  background: #c4d459; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cbc048; }
+  background: #2025a7; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #392438; }
+  background: #3b95a2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #e36c7c; }
+  background: #56271e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ce8c2f; }
+  background: #689d13; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6bb4ea; }
+  background: #cb9629; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #179793; }
+  background: #0ea081; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9337fa; }
+  background: #19defd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #eab74b; }
+  background: #4882cf; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #345c6b; }
+  background: #e0f862; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #21932a; }
+  background: #ad11c4; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #23b461; }
+  background: #1b80f6; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4dc67e; }
+  background: #85d814; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #105b87; }
+  background: #d318e2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #619a44; }
+  background: #d84e86; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6a66a9; }
+  background: #de918b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0a1c93; }
+  background: #65b5f3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #18bfdc; }
+  background: #301a1d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #734e91; }
+  background: #c01011; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #4539dc; }
+  background: #c465af; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #cde860; }
+  background: #90d354; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6c1f09; }
+  background: #a7f72f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6fd0f4; }
+  background: #e00cb6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #12b6b2; }
+  background: #1472f4; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fb1543; }
+  background: #fdaabb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d1a290; }
+  background: #6c986b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d9e6fb; }
+  background: #c69266; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #de0358; }
+  background: #306d48; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1b9388; }
+  background: #50a868; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7cf290; }
+  background: #ed5f9e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2d38b3; }
+  background: #933983; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e697ab; }
+  background: #eed7ae; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #98ff01; }
+  background: #1fb24e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #701b68; }
+  background: #85bfcb; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #41d6ec; }
+  background: #6adcc5; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6d27ec; }
+  background: #896cf9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #9251e1; }
+  background: #f54ba6; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #e4d15b; }
+  background: #f892e7; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #498946; }
+  background: #94a5ce; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #deeacd; }
+  background: #b59458; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #12a2e9; }
+  background: #878eea; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #93f48c; }
+  background: #49e81c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #18c490; }
+  background: #4e9a6f; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f044dc; }
+  background: #0b963b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #703cfc; }
+  background: #6ab821; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #777cd3; }
+  background: #8bc996; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #355c74; }
+  background: #01c74e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16579,8 +16579,8 @@ input:not(:checked) + .slider-switch > .switch-non {
     right: -65px;
     left: unset;
     width: 362px;
-    box-shadow: 0px 5px 7px 6px #c1c1c1;
-    padding: 15px;
+    box-shadow: 0px 2px 6px 2px #c1c1c1;
+    padding: 20px;
     position: absolute;
     border-radius: 6px; }
   .userProfile-wrapper .userLogout-icon {
@@ -16596,7 +16596,7 @@ input:not(:checked) + .slider-switch > .switch-non {
     background-image: url(../images/userEdit-icon.svg);
     background-repeat: no-repeat;
     background-position: center center;
-    padding: 14px 21px;
+    padding: 14px 20px;
     border-radius: 28px;
     background-size: 25px; }
     .userProfile-wrapper .userSettings-icon:hover {
@@ -16659,7 +16659,7 @@ input:not(:checked) + .slider-switch > .switch-non {
         .userProfile-wrapper .userPictureNTitle .userpic-div .userEdit-icon img {
           width: 16px; }
   .userProfile-wrapper .userSettingIcons-wrapper {
-    margin: 15px auto;
+    margin: 20px auto;
     width: 100%;
     display: flex;
     justify-content: center;
