--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0adaa3; }
+  background: #15eaab; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9a04e6; }
+  background: #945cc2; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ca662e; }
+  background: #1c4594; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1a9e43; }
+  background: #81ea59; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #99136e; }
+  background: #ce0ed2; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b17a50; }
+  background: #a79b21; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #759621; }
+  background: #6b9d68; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #3404fa; }
+  background: #bd5409; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #cb6aca; }
+  background: #242a13; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d29763; }
+  background: #f30c61; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d34e73; }
+  background: #37c153; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5bb36d; }
+  background: #b4a562; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7b224d; }
+  background: #13ada8; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #894ff5; }
+  background: #263876; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b914eb; }
+  background: #b292ea; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f07038; }
+  background: #f6eff8; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #58f070; }
+  background: #ecf813; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8cda43; }
+  background: #0e5359; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8f2b1f; }
+  background: #627064; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #bdd005; }
+  background: #d153f2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5682cd; }
+  background: #1eff09; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #fb7c30; }
+  background: #cbebb6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7ef41d; }
+  background: #c19f5e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f8756d; }
+  background: #2ac839; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6c2fd3; }
+  background: #48dcf7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #918513; }
+  background: #f4bb2c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b76b6c; }
+  background: #26ad6a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3e954a; }
+  background: #fe4a62; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #7b3e48; }
+  background: #e5181a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #62db82; }
+  background: #b4a741; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ec9bf3; }
+  background: #969682; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #5d353f; }
+  background: #c23486; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e94a7d; }
+  background: #b0c93f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #cf0cd1; }
+  background: #c75694; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9f984d; }
+  background: #34b2c4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #8c43ca; }
+  background: #7f4809; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f24f75; }
+  background: #3f8681; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e4a5f9; }
+  background: #9ce6c0; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #e45aec; }
+  background: #1094dd; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #753959; }
+  background: #e73eae; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #64fb97; }
+  background: #819ca2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d5e64b; }
+  background: #76c5b0; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #dbeabb; }
+  background: #e6f0dc; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6c3b86; }
+  background: #3eba23; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #4836c4; }
+  background: #651dba; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #07c0a7; }
+  background: #53f37e; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #67abff; }
+  background: #cd5471; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2fa1f2; }
+  background: #e285aa; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a0ebbf; }
+  background: #5ad3e9; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6e49ae; }
+  background: #281d19; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #492d96; }
+  background: #c74e28; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #37b396; }
+  background: #100911; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #953067; }
+  background: #1e471c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c4d459; }
+  background: #d4f318; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2025a7; }
+  background: #1d7a4c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3b95a2; }
+  background: #df81b2; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #56271e; }
+  background: #2a8af6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #689d13; }
+  background: #4476e3; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #cb9629; }
+  background: #ac1f94; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0ea081; }
+  background: #0a7ac0; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #19defd; }
+  background: #555fe4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #4882cf; }
+  background: #8e3ea9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e0f862; }
+  background: #9030ca; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ad11c4; }
+  background: #04d4eb; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1b80f6; }
+  background: #0d3ce3; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #85d814; }
+  background: #43aebe; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d318e2; }
+  background: #1b1205; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d84e86; }
+  background: #9c6aa6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #de918b; }
+  background: #4b7f13; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #65b5f3; }
+  background: #bc647a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #301a1d; }
+  background: #43d37e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c01011; }
+  background: #1d0fd2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c465af; }
+  background: #0e9f47; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #90d354; }
+  background: #cb4f46; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a7f72f; }
+  background: #7cb2c3; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e00cb6; }
+  background: #df70e2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1472f4; }
+  background: #41eb05; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fdaabb; }
+  background: #a3f3b8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6c986b; }
+  background: #e3b783; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c69266; }
+  background: #ed88a8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #306d48; }
+  background: #7fa536; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #50a868; }
+  background: #b8fa73; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ed5f9e; }
+  background: #68b347; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #933983; }
+  background: #b5bc4c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #eed7ae; }
+  background: #b70491; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1fb24e; }
+  background: #620f18; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #85bfcb; }
+  background: #bcf7e4; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #6adcc5; }
+  background: #5d2eb9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #896cf9; }
+  background: #fbaa60; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f54ba6; }
+  background: #393d83; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f892e7; }
+  background: #52b4ae; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #94a5ce; }
+  background: #7691dc; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #b59458; }
+  background: #9ccda8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #878eea; }
+  background: #083ec6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #49e81c; }
+  background: #237bbb; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4e9a6f; }
+  background: #f10bcd; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0b963b; }
+  background: #84f50a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6ab821; }
+  background: #fa9c73; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #8bc996; }
+  background: #588b51; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #01c74e; }
+  background: #a772e2; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16683,10 +16683,10 @@ input:not(:checked) + .slider-switch > .switch-non {
   display: none; }
 
 .eyes-icon-password input[type="checkbox"]:checked + label {
-  background-image: url(../images/eye-show-icon-line.svg); }
+  background-image: url(../images/eye-hide-icon.svg); }
 
 .eyes-icon-password label.show-password-icon {
-  background: url(../images/eye-show-icon.svg) no-repeat 0px center;
+  background: url(../images/eye-hide-icon.svg) no-repeat 0px center;
   cursor: pointer;
   padding-left: 23px; }
 
